# bayes_opt-genom3

./: Makefile.am  Makefile.in  README.adoc  README.md  aclocal.m4  bayes_opt-genom3-uninstalled.pc.in  bayes_opt-genom3.pc.in  bayes_opt.gen  bayes_struct.idl  configure  configure.ac
autoconf/: acbayes_opt.h.in
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
codels/: Makefile.am  Makefile.in  bayes_opt_codels.c  bayes_opt_optimize_codels.c
output/: next_params.json  optimizer_state.json
python/: optimiser_core.py  optimiser_daemon.py  tcl_control.py  tuner_optimizer.py
scripts/: bayes_opt.h  bayes_opt_activity.c  optimizer_core.c
